@@ -34,7 +34,6 @@ import greencity.enums.UserStatus;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.NotSavedException;
-import greencity.exception.exceptions.UnsupportedSortException;
 import greencity.filters.EcoNewsSpecification;
 import greencity.filters.SearchCriteria;
 import greencity.rating.RatingCalculation;
@@ -51,7 +50,6 @@ import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
 import jakarta.servlet.http.HttpServletRequest;
 import java.time.LocalDateTime;
-import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -64,22 +62,18 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.web.multipart.MultipartFile;
-import java.io.IOException;
 import java.net.MalformedURLException;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Base64;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -152,7 +146,6 @@ class EcoNewsServiceImplTest {
     private final AddEcoNewsDtoResponse addEcoNewsDtoResponse = ModelUtils.getAddEcoNewsDtoResponse();
     private final EcoNewsGenericDto ecoNewsGenericDto = ModelUtils.getEcoNewsGenericDto();
 
-    private static final String ECO_NEWS_TITLE = "title";
     private static final String ECO_NEWS_JOIN_TAG = "tags";
     private static final String ECO_NEWS_TAG_TRANSLATION = "tagTranslations";
     private static final String ECO_NEWS_TAG_TRANSLATION_NAME = "name";
@@ -165,7 +158,6 @@ class EcoNewsServiceImplTest {
 
         when(modelMapper.map(addEcoNewsDtoRequest, EcoNews.class)).thenReturn(ecoNews);
         when(modelMapper.map(ecoNews, AddEcoNewsDtoResponse.class)).thenReturn(addEcoNewsDtoResponse);
-        when(languageService.extractLanguageCodeFromRequest()).thenReturn(AppConstant.DEFAULT_LANGUAGE_CODE);
         when(newsSubscriberService.findAll()).thenReturn(Collections.emptyList());
         when(restClient.findByEmail(TestConst.EMAIL)).thenReturn(ModelUtils.getUserVO());
         List<TagVO> tagVOList = Collections.singletonList(ModelUtils.getTagVO());
@@ -182,12 +174,8 @@ class EcoNewsServiceImplTest {
     }
 
     @Test
-    void saveWithExistedImageTest() throws IOException {
-        var image = ModelUtils.getFile();
-        var imageToEncode = Base64.getEncoder().encodeToString(image.getBytes());
-        var tagVOList = Collections.singletonList(ModelUtils.getTagVO());
-
-        addEcoNewsDtoRequest.setImage(imageToEncode);
+    void saveWithExistedImageTest() {
+        List<TagVO> tagVOList = Collections.singletonList(ModelUtils.getTagVO());
 
         when(modelMapper.map(addEcoNewsDtoRequest, EcoNews.class)).thenReturn(ecoNews);
         when(restClient.findByEmail(TestConst.EMAIL)).thenReturn(ModelUtils.getUserVO());
@@ -201,7 +189,7 @@ class EcoNewsServiceImplTest {
         when(modelMapper.map(ModelUtils.getUserVO(), User.class)).thenReturn(ModelUtils.getUser());
         when(userService.findById(anyLong())).thenReturn(ModelUtils.getUserVO());
 
-        AddEcoNewsDtoResponse actual = ecoNewsService.save(addEcoNewsDtoRequest, image, TestConst.EMAIL);
+        AddEcoNewsDtoResponse actual = ecoNewsService.save(addEcoNewsDtoRequest, null, TestConst.EMAIL);
 
         assertEquals(addEcoNewsDtoResponse, actual);
 
@@ -237,12 +225,7 @@ class EcoNewsServiceImplTest {
     }
 
     @Test
-    @SneakyThrows
-    void saveEcoNews() {
-        MultipartFile image = ModelUtils.getFile();
-        String imageToEncode = Base64.getEncoder().encodeToString(image.getBytes());
-        addEcoNewsDtoRequest.setImage(imageToEncode);
-
+    void saveEcoNews() throws Exception {
         when(modelMapper.map(addEcoNewsDtoRequest, EcoNews.class)).thenReturn(ecoNews);
         when(restClient.findByEmail(TestConst.EMAIL)).thenReturn(ModelUtils.getUserVO());
         when(modelMapper.map(ModelUtils.getUserVO(), User.class)).thenReturn(ModelUtils.getUser());
@@ -257,50 +240,9 @@ class EcoNewsServiceImplTest {
             new TypeToken<List<Tag>>() {
             }.getType())).thenReturn(tags);
         when(userService.findByEmail(anyString())).thenReturn(ModelUtils.getUserVO());
-        EcoNewsGenericDto actual = ecoNewsService.saveEcoNews(addEcoNewsDtoRequest, image, TestConst.EMAIL);
+        EcoNewsGenericDto actual = ecoNewsService.saveEcoNews(addEcoNewsDtoRequest, null, TestConst.EMAIL);
 
         assertEquals(ecoNewsGenericDto, actual);
-    }
-
-    @Test
-    void getThreeLastEcoNews() {
-        ZonedDateTime zonedDateTime = ZonedDateTime.now();
-
-        EcoNewsDto ecoNewsDto = EcoNewsDto.builder()
-            .creationDate(zonedDateTime)
-            .imagePath("test image path")
-            .id(1L)
-            .title("test title")
-            .content("content")
-            .shortInfo(null)
-            .author(ModelUtils.getEcoNewsAuthorDto())
-            .tags(Collections.emptyList())
-            .tagsUa(Collections.emptyList())
-            .likes(1)
-            .countComments(0)
-            .hidden(false)
-            .build();
-
-        EcoNews ecoNews = ModelUtils.getEcoNews();
-
-        List<EcoNewsDto> dtoList = Collections.singletonList(ecoNewsDto);
-
-        when(ecoNewsRepo.getThreeLastEcoNews()).thenReturn(Collections.singletonList(ecoNews));
-        when(modelMapper.map(ecoNews, EcoNewsDto.class)).thenReturn(ecoNewsDto);
-
-        List<EcoNewsDto> actual = ecoNewsService.getThreeLastEcoNews();
-
-        assertEquals(dtoList, actual);
-    }
-
-    @Test
-    void getThreeLastEcoNewsNotFound() {
-        List<EcoNews> ecoNews = Collections.emptyList();
-
-        when(ecoNewsRepo.getThreeLastEcoNews())
-            .thenReturn(ecoNews);
-
-        assertThrows(NotFoundException.class, () -> ecoNewsService.getThreeLastEcoNews());
     }
 
     @Test
@@ -340,73 +282,6 @@ class EcoNewsServiceImplTest {
     }
 
     @Test
-    void findAllByUserPageIsSort() {
-        List<EcoNews> ecoNews = Collections.singletonList(ModelUtils.getEcoNews());
-        PageRequest pageRequest = PageRequest.of(0, 2);
-        Page<EcoNews> translationPage = new PageImpl<>(ecoNews,
-            pageRequest, ecoNews.size());
-
-        List<EcoNewsGenericDto> dtoList = Collections.singletonList(
-            ModelUtils.getEcoNewsGenericDto());
-        PageableAdvancedDto<EcoNewsGenericDto> pageableDto = new PageableAdvancedDto<>(dtoList, dtoList.size(), 0, 1,
-            0, false, false, true, true);
-
-        UserVO userVO = UserVO.builder().id(1L).build();
-        User user = User.builder().id(1L).build();
-        when(modelMapper.map(userVO, User.class)).thenReturn(user);
-        when(ecoNewsRepo.findAllByAuthorOrderByCreationDateDesc(user, pageRequest)).thenReturn(translationPage);
-        when(modelMapper.map(ecoNews.getFirst(), EcoNewsGenericDto.class)).thenReturn(dtoList.getFirst());
-
-        PageableAdvancedDto<EcoNewsGenericDto> actual = ecoNewsService.findAllByUser(userVO, pageRequest);
-
-        assertEquals(pageableDto, actual);
-    }
-
-    @Test
-    void findAllByUserPageInvalidSorted() {
-        PageRequest pageRequest = PageRequest.of(0, 1, Sort.by("id"));
-
-        UserVO userVO = UserVO.builder().id(1L).build();
-
-        assertThrows(UnsupportedSortException.class, () -> {
-            ecoNewsService.findAllByUser(userVO, pageRequest);
-        });
-    }
-
-    @Test
-    void find() {
-        List<EcoNews> ecoNews = Collections.singletonList(ModelUtils.getEcoNews());
-        PageRequest pageRequest = PageRequest.of(0, 2);
-        Page<EcoNews> page = new PageImpl<>(ecoNews, pageRequest, ecoNews.size());
-        List<EcoNewsGenericDto> dtoList = Collections.singletonList(ModelUtils.getEcoNewsGenericDto());
-        PageableAdvancedDto<EcoNewsGenericDto> pageableDto = new PageableAdvancedDto<>(dtoList, dtoList.size(), 0, 1,
-            0, false, false, true, true);
-        List<String> tags = Collections.singletonList(ModelUtils.getTagTranslations().get(0).getName());
-        List<String> lowerCaseTags = tags.stream().map(String::toLowerCase).collect(Collectors.toList());
-
-        when(modelMapper.map(ecoNews.getFirst(), EcoNewsGenericDto.class)).thenReturn(dtoList.getFirst());
-        when(ecoNewsRepo.findByTags(pageRequest, lowerCaseTags))
-            .thenReturn(page);
-
-        PageableAdvancedDto<EcoNewsGenericDto> actual =
-            ecoNewsService.find(pageRequest, tags);
-
-        assertEquals(pageableDto, actual);
-    }
-
-    @Test
-    void findDtoById() {
-        EcoNewsDto ecoNewsDto = modelMapper.map(ecoNews, EcoNewsDto.class);
-
-        when(ecoNewsRepo.findById(1L)).thenReturn(Optional.of(ecoNews));
-        when(modelMapper.map(ecoNews, EcoNewsDto.class)).thenReturn(ecoNewsDto);
-
-        EcoNewsDto actual = ecoNewsService.getById(1L);
-
-        assertEquals(ecoNewsDto, actual);
-    }
-
-    @Test
     void delete() {
         String accessToken = "Token";
         EcoNews ecoNews = ModelUtils.getEcoNews();
@@ -435,11 +310,10 @@ class EcoNewsServiceImplTest {
 
     @Test
     void getThreeRecommendedEcoNews() {
-        List<EcoNewsDto> dtoList = Collections.singletonList(modelMapper.map(ecoNews, EcoNewsDto.class));
+        List<EcoNewsDto> dtoList = List.of(ModelUtils.getEcoNewsDto());
 
-        when(ecoNewsRepo.findById(1L)).thenReturn(Optional.ofNullable(ecoNews));
-        when(ecoNewsRepo.getThreeRecommendedEcoNews(1L)).thenReturn(Collections.singletonList(ecoNews));
-        when(ecoNewsRepo.getThreeLastEcoNews()).thenReturn(Collections.singletonList(ecoNews));
+        when(ecoNewsRepo.findById(1L)).thenReturn(Optional.of(ecoNews));
+        when(ecoNewsRepo.getThreeRecommendedEcoNews(1L)).thenReturn(List.of(ecoNews));
         when(modelMapper.map(ecoNews, EcoNewsDto.class)).thenReturn(dtoList.getFirst());
 
         List<EcoNewsDto> actual = ecoNewsService.getThreeRecommendedEcoNews(1L);
@@ -484,34 +358,21 @@ class EcoNewsServiceImplTest {
     }
 
     @Test
-    void getAllPublishedNewsByUserId() {
-        List<EcoNews> ecoNews = Collections.singletonList(ModelUtils.getEcoNews());
-        List<EcoNewsDto> dtoList = Collections.singletonList(modelMapper.map(ecoNews, EcoNewsDto.class));
-
-        when(modelMapper.map(ecoNews.getFirst(), EcoNewsDto.class)).thenReturn(dtoList.getFirst());
-        when(ecoNewsRepo.findAllByUserId(1L)).thenReturn(ecoNews);
-
-        List<EcoNewsDto> actual = ecoNewsService.getAllPublishedNewsByUserId(1L);
-
-        assertEquals(dtoList, actual);
-    }
-
-    @Test
-    void getAmountOfPublishedNewsByUserIdTest() {
-        when(ecoNewsRepo.getAmountOfPublishedNewsByUserId(1L)).thenReturn(10L);
-        Long actual = ecoNewsService.getAmountOfPublishedNewsByUserId(1L);
+    void getAmountOfPublishedNewsTest() {
+        when(ecoNewsRepo.countByAuthorId(1L)).thenReturn(10L);
+        Long actual = ecoNewsService.getAmountOfPublishedNews(1L);
         assertEquals(10L, actual);
     }
 
     @Test
-    void getAllPublishedNewsByUserTest() {
+    void getAllByUserTest() {
         UserVO userVO = ModelUtils.getUserVO();
         List<EcoNews> ecoNews = Collections.singletonList(ModelUtils.getEcoNews());
         List<EcoNewsDto> dtoList = Collections.singletonList(modelMapper.map(ecoNews, EcoNewsDto.class));
 
-        when(ecoNewsRepo.findAllByUserId(userVO.getId())).thenReturn(ecoNews);
+        when(ecoNewsRepo.findAllByAuthorId(userVO.getId())).thenReturn(ecoNews);
 
-        List<EcoNewsDto> actual = ecoNewsService.getAllPublishedNewsByUser(userVO);
+        List<EcoNewsDto> actual = ecoNewsService.getAllByUser(userVO);
         assertEquals(dtoList, actual);
     }
 
@@ -549,7 +410,6 @@ class EcoNewsServiceImplTest {
 
     @Test
     void updateVoidTest() {
-        EcoNews ecoNews = ModelUtils.getEcoNews();
         EcoNewsDtoManagement ecoNewsDtoManagement = ModelUtils.getEcoNewsDtoManagement();
         EcoNewsVO ecoNewsVO = ModelUtils.getEcoNewsVO();
         when(ecoNewsRepo.findById(1L)).thenReturn(Optional.of(ecoNews));
@@ -563,14 +423,15 @@ class EcoNewsServiceImplTest {
 
     @Test
     void updateEcoNewsDtoTest() {
-        EcoNews ecoNews = ModelUtils.getEcoNews();
         EcoNewsVO ecoNewsVO = ModelUtils.getEcoNewsVO();
         EcoNewsGenericDto ecoNewsDto = ModelUtils.getEcoNewsGenericDto();
         UpdateEcoNewsDto updateEcoNewsDto = ModelUtils.getUpdateEcoNewsDto();
+        MultipartFile file = ModelUtils.getFile();
         when(ecoNewsRepo.findById(1L)).thenReturn(Optional.of(ecoNews));
         when(ecoNewsService.findById(1L)).thenReturn(ecoNewsVO);
         when(modelMapper.map(ecoNewsVO, EcoNews.class)).thenReturn(ecoNews);
         when(ecoNewsRepo.save(ecoNews)).thenReturn(ecoNews);
+        when(fileService.upload(file)).thenReturn("https://google.com/");
         when(modelMapper.map(ecoNews, EcoNewsGenericDto.class)).thenReturn(ecoNewsDto);
         List<TagVO> tags = ModelUtils.getEcoNewsVO().getTags();
         when(tagService.findTagsByNamesAndType(updateEcoNewsDto.getTags(), TagType.ECO_NEWS)).thenReturn(tags);
@@ -580,8 +441,33 @@ class EcoNewsServiceImplTest {
             }.getType())).thenReturn(ecoNews.getTags());
 
         EcoNewsGenericDto actual =
-            ecoNewsService.update(updateEcoNewsDto, any(MultipartFile.class), ModelUtils.getUserVO());
+            ecoNewsService.update(updateEcoNewsDto, file, ModelUtils.getUserVO());
         assertEquals(ecoNewsDto, actual);
+    }
+
+    @Test
+    void updateEcoNewsDtoTest_whenEcoNewsNotSaved_throwException() {
+        UserVO userVO = ModelUtils.getUserVO();
+        EcoNewsVO ecoNewsVO = ModelUtils.getEcoNewsVO();
+        EcoNewsGenericDto ecoNewsDto = ModelUtils.getEcoNewsGenericDto();
+        UpdateEcoNewsDto updateEcoNewsDto = ModelUtils.getUpdateEcoNewsDto();
+        MultipartFile file = ModelUtils.getFile();
+        when(ecoNewsRepo.findById(1L)).thenReturn(Optional.of(ecoNews));
+        when(ecoNewsService.findById(1L)).thenReturn(ecoNewsVO);
+        when(modelMapper.map(ecoNewsVO, EcoNews.class)).thenReturn(ecoNews);
+        when(modelMapper.map(ecoNews, EcoNewsGenericDto.class)).thenReturn(ecoNewsDto);
+        List<TagVO> tags = ModelUtils.getEcoNewsVO().getTags();
+        when(tagService.findTagsByNamesAndType(updateEcoNewsDto.getTags(), TagType.ECO_NEWS)).thenReturn(tags);
+        when(modelMapper.map(tagService
+            .findTagsByNamesAndType(updateEcoNewsDto.getTags(), TagType.ECO_NEWS),
+            new TypeToken<List<Tag>>() {
+            }.getType())).thenReturn(ecoNews.getTags());
+        when(ecoNewsRepo.save(ecoNews)).thenThrow(new RuntimeException());
+
+        assertThrows(NotSavedException.class,
+            () -> ecoNewsService.update(updateEcoNewsDto, file, userVO));
+
+        verify(fileService).delete(anyString());
     }
 
     @Test
@@ -590,7 +476,6 @@ class EcoNewsServiceImplTest {
         UserVO user = ModelUtils.getUserVO();
         ecoNews.getAuthor().setId(2L);
         EcoNewsVO ecoNewsVO = ModelUtils.getEcoNewsVO();
-        EcoNewsDto ecoNewsDto = ModelUtils.getEcoNewsDto();
         UpdateEcoNewsDto updateEcoNewsDto = ModelUtils.getUpdateEcoNewsDto();
         when(ecoNewsRepo.findById(1L)).thenReturn(Optional.of(ecoNews));
         when(ecoNewsService.findById(1L)).thenReturn(ecoNewsVO);
@@ -606,7 +491,6 @@ class EcoNewsServiceImplTest {
         Page<EcoNews> page = new PageImpl<>(ecoNews, pageable, ecoNews.size());
         EcoNewsViewDto ecoNewsViewDto = ModelUtils.getEcoNewsViewDto();
         EcoNewsDto ecoNewsDto = ModelUtils.getEcoNewsDto();
-        EcoNewsSpecification ecoNewsSpecification = ecoNewsService.getSpecification(ecoNewsViewDto);
         when(ecoNewsRepo.findAll(any(EcoNewsSpecification.class), any(Pageable.class))).thenReturn(page);
         when(modelMapper.map(ecoNews, EcoNewsDto.class)).thenReturn(ecoNewsDto);
         PageableAdvancedDto<EcoNewsDto> actual =
@@ -772,7 +656,7 @@ class EcoNewsServiceImplTest {
         when(ecoNewsRepo.findById(1L)).thenReturn(Optional.of(ecoNews));
         when(modelMapper.map(ecoNews, EcoNewsVO.class)).thenReturn(ecoNewsVO);
 
-        boolean isLikedByUser = ecoNewsService.checkNewsIsLikedByUser(1L, userVO);
+        boolean isLikedByUser = ecoNewsService.checkNewsIsLikedByUser(1L, userVO.getId());
 
         assertFalse(isLikedByUser);
     }
@@ -786,7 +670,7 @@ class EcoNewsServiceImplTest {
     }
 
     @Test
-    void findByFilters() {
+    void find() {
         Pageable pageable = PageRequest.of(0, 2);
         List<EcoNews> ecoNews = Collections.singletonList(ModelUtils.getEcoNews());
         Page<EcoNews> page = new PageImpl<>(ecoNews, pageable, ecoNews.size());
@@ -802,11 +686,17 @@ class EcoNewsServiceImplTest {
         when(join.get(ECO_NEWS_TAG_TRANSLATION)).thenReturn(tagTranslations);
         when(tagTranslations.get(ECO_NEWS_TAG_TRANSLATION_NAME)).thenReturn(name);
 
+        Join userJoin = mock(Join.class);
+        Path path = mock(Path.class);
+        when(root.join("author")).thenReturn(userJoin);
+        when(userJoin.get("id")).thenReturn(path);
+
         when(criteriaBuilder.lower(any())).thenReturn(name);
         when(criteriaBuilder.like(any(), anyString())).thenReturn(mock(Predicate.class));
         when(criteriaBuilder.and(any())).thenReturn(mock(Predicate.class));
+        when(criteriaBuilder.equal(any(), any())).thenReturn(mock(Predicate.class));
 
-        ecoNewsService.getPredicate(root, criteriaBuilder, tags, "1");
+        ecoNewsService.getPredicate(root, criteriaBuilder, tags, "1", 1L);
 
         ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
 
@@ -816,17 +706,17 @@ class EcoNewsServiceImplTest {
 
         when(ecoNewsRepo.findAll(any(Specification.class), any(Pageable.class))).thenReturn(page);
 
-        ecoNewsService.findByFilters(pageable, tags, "1");
+        ecoNewsService.find(pageable, tags, "1", 1L);
         verify(ecoNewsRepo, times(1)).findAll(any(Specification.class), any(Pageable.class));
     }
 
     @Test
-    void findByFilters_ReturnsCorrectResult_WhenTagsAndTitleAreEmpty() {
+    void find_ReturnsCorrectResult_WhenTagsAndTitleAreEmpty() {
         Pageable pageable = PageRequest.of(0, 2);
         List<EcoNews> ecoNews = Collections.singletonList(ModelUtils.getEcoNews());
         Page<EcoNews> page = new PageImpl<>(ecoNews, pageable, ecoNews.size());
         when(ecoNewsRepo.findAll(any(Pageable.class))).thenReturn(page);
-        ecoNewsService.findByFilters(pageable, null, null);
+        ecoNewsService.find(pageable, null, null, null);
         verify(ecoNewsRepo, times(1)).findAll(any(Pageable.class));
     }
 
@@ -838,13 +728,6 @@ class EcoNewsServiceImplTest {
         ecoNewsService.getContentAndSourceForEcoNewsById(1L);
 
         verify(ecoNewsRepo).findById(1L);
-    }
-
-    @Test
-    void uploadImages() {
-        MultipartFile[] multipartFiles = {ModelUtils.getFile()};
-        ecoNewsService.uploadImages(multipartFiles);
-        Arrays.stream(multipartFiles).forEach(multipartFile -> verify(fileService).upload(multipartFile));
     }
 
     @Test
@@ -904,8 +787,8 @@ class EcoNewsServiceImplTest {
         ecoNewsService.like(actionUser, ecoNewsVO.getId());
 
         assertTrue(ecoNewsVO.getUsersLikedNews().contains(actionUser));
-        verify(userNotificationService, times(1)).createNotification(
-            targetUser, actionUser, NotificationType.ECONEWS_LIKE, ecoNewsVO.getId(), ecoNewsVO.getTitle());
+        verify(userNotificationService, times(1)).createOrUpdateLikeNotification(
+            targetUser, actionUser, ecoNewsVO.getId(), ecoNewsVO.getTitle(), true);
         verify(achievementCalculation, times(1)).calculateAchievement(actionUser,
             AchievementCategoryType.LIKE_COMMENT_OR_REPLY, AchievementAction.ASSIGN);
         verify(ratingCalculation, times(1))
@@ -930,12 +813,12 @@ class EcoNewsServiceImplTest {
 
         ModelMapper mapper = new ModelMapper();
         UserVO userVO = mapper.map(action, UserVO.class);
-        UserVO targetUser = mapper.map(author, UserVO.class);
         UserVO actionUser = mapper.map(action, UserVO.class);
 
         EcoNews news = EcoNews.builder()
             .id(1L)
             .author(author)
+            .title("test title")
             .usersLikedNews(new HashSet<>(Set.of(action)))
             .build();
         EcoNewsVO ecoNewsVO = mapper.map(news, EcoNewsVO.class);
@@ -949,9 +832,8 @@ class EcoNewsServiceImplTest {
 
         assertFalse(ecoNewsVO.getUsersLikedNews().contains(actionUser));
 
-        verify(userNotificationService, times(1))
-            .removeActionUserFromNotification(targetUser, actionUser, ecoNewsVO.getId(), NotificationType.ECONEWS_LIKE);
-        verify(userNotificationService, times(1)).checkUnreadNotification(author.getId());
+        verify(userNotificationService, times(1)).createOrUpdateLikeNotification(
+            null, actionUser, ecoNewsVO.getId(), "test title", false);
         verify(achievementCalculation, times(1))
             .calculateAchievement(actionUser, AchievementCategoryType.LIKE_COMMENT_OR_REPLY, AchievementAction.DELETE);
         verify(ratingCalculation, times(1))
@@ -988,4 +870,5 @@ class EcoNewsServiceImplTest {
 
         assertThrows(NotFoundException.class, () -> ecoNewsService.setHiddenValue(1L, adminVO, true));
     }
+
 }
